<resources>
    <string name="app_name">applicense</string>

    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="multiple_include_own">Multiple with own License</string>
    <string name="multiple_programmatic">Multiple programmaticly</string>
    <string name="single_fragment">Single (Fragment)</string>
    <string name="multiple_fragment">Multiple (Fragment)</string>
    <string name="multiple_include_own_fragment">Multiple with own License (Fragment)</string>
    <string name="multiple_programmatic_fragment">Multiple programmaticly (Fragment)</string>
    <string name="custom_theme">Custom theme</string>
    <string name="custom_theme_fragment">Custom theme (Fragment)</string>
    <string name="custom_css_style">Custom CSS Style</string>
    <string name="custom_css_style_fragment">Custom CSS Style (Fragment)</string>


    <string name="rgba_background_format">background-color:rgba(%1$d,%2$d,%3$d,%4$1f);</string>
</resources>
